--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,18 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               Jeong Hyunho
+tagline:             ''
+description:         'A collection of notes.<br>Made by <a href="https://twitter.com/jeong_hyunho" target="_blank">@hyunho_jeong</a>.'
+url:                 http://JeongHyunho.github.io
 baseurl:             ''
 paginate:            5
 permalink:           pretty
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Jeong Hyunho
+  url:               https://twitter.com/jeong_hyunho
+  email:             hyunho_jeong@kaist.ac.kr
+  twitter:           jeong_hyunho
 
 # Gems
 plugins:
@@ -19,4 +20,3 @@ plugins:
 
 # Custom vars
 version:             1.1.0
-google_analytics_id: #UA-XXXX-Y
