--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:               Jeong Hyunho
 tagline:             ''
 description:         'A collection of notes.<br>Made by <a href="https://twitter.com/jeong_hyunho" target="_blank">@hyunho_jeong</a>.'
 url:                 http://JeongHyunho.github.io
-baseurl:             '/lanyon'
+baseurl:             '/lanyon/'
 paginate:            5
 permalink:           pretty
 
