--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 title:               Jeong Hyunho
 tagline:             ''
 description:         'A collection of notes.<br>Made by <a href="https://twitter.com/jeong_hyunho" target="_blank">@hyunho_jeong</a>.'
-url:                 http://lanyon.getpoole.com
-baseurl:             '/lanyon/'
+baseurl:             '/'
 paginate:            5
 permalink:           pretty
 
